updated preview image and readme.md

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#FFFFFF" />
-  <meta property="og:image" content="%PUBLIC_URL%/screen.jpg">
+  <meta property="og:image" content="%PUBLIC_URL%/splash.jpg">
   <meta property="og:url" content="%PUBLIC_URL%">
   <meta property="og:title" content="React ToDo List">
   <meta property="og:description" content="Just simple ToDo list in React.js">
