--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>You need to enable JavaScript to run this app. And smile :)</noscript>
   <div id="root"></div>
 </body>
 
